--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
   box-sizing: inherit;
 }
 
+:root {
+  --primary-color: #ffcb03;
+  --primary-bg-color: #f3f3f3;
+  --secondary-bg-color: #37383d;
+  --primary-text-color: #444;
+  --secondary-text-color: #666;
+  --gradient-primary: linear-gradient(to top left, #ffb003, #ffcb03);
+}
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -11,13 +20,124 @@ html {
 
 body {
   min-height: 100vh;
-  padding: 1.2rem 1.2rem 3rem;
-  /* background-color: rgb(243, 243, 243);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 5rem; */
+  background-color: var(--primary-bg-color);
 
   font-family: 'Poppins', sans-serif;
+  color: var(--primary-text-color);
+}
+
+.navbar {
+  padding: 2rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  width: 13rem;
+  height: auto;
+}
+
+/* MOBILE NAV */
+.header__nav {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  top: 0;
+  left: -100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
+  background-color: #fff;
+  list-style-type: none;
+  transition: all 1s;
+}
+
+.header__nav.active {
+  left: 0;
+  transition: all 1s;
+}
+
+.navbar__link {
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+
+.navbar__link:hover {
+  text-decoration: underline;
+}
+
+/* HAMBURGER BUTTON */
+.btn--hamburger {
+  display: block;
+  width: 3.5rem;
+  height: 3.5rem;
+  border: none;
+  outline: none;
+  appearance: none;
+}
+
+.menubar {
+  position: relative;
+  width: 100%;
+  height: 0.3rem;
+  border-radius: 10rem;
+  background-color: var(--secondary-bg-color);
+  transition: all 0.6s;
+}
+
+.btn--hamburger .menubar::before,
+.btn--hamburger .menubar::after {
+  content: '';
+  position: absolute;
+  margin-top: -1rem;
+  top: 0;
+  right: 0;
+  width: 2.3rem;
+  height: 0.3rem;
+  border-radius: 3rem;
+  background-color: var(--secondary-bg-color);
+  transition: all 0.6s;
+}
+
+.btn--hamburger .menubar::after {
+  top: unset;
+  bottom: 0;
+  margin: 0;
+  margin-bottom: -1rem;
+}
+
+.btn--hamburger.active .menubar {
+  background: transparent;
+  transition: all 0.6s;
+}
+
+.btn--hamburger.active .menubar::before,
+.btn--hamburger.active .menubar::after {
+  width: 100%;
+  background: var(--secondary-bg-color);
+  transition: all 0.6s;
+}
+
+.btn--hamburger.active .menubar::before {
+  transform: rotate(45deg) translateX(1.4rem);
+}
+
+.btn--hamburger.active .menubar::after {
+  transform: rotate(-45deg) translateX(1.4rem);
+}
+
+/* MAIN CONTENT */
+main {
+  padding: 1.5rem;
+}
+
+img {
+  width: 100%;
 }
