--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,18 @@ body {
   color: var(--primary-text-color);
 }
 
-.navbar {
+header {
   padding: 2rem 1.5rem;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .header__logo {
-  width: 13rem;
+  width: 15rem;
   height: auto;
 }
 
@@ -51,7 +54,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2.5rem;
+  gap: 3rem;
   background-color: #fff;
   list-style-type: none;
   transition: all 1s;
@@ -67,6 +70,12 @@ body {
   font-weight: 400;
   text-decoration: none;
   color: var(--primary-text-color);
+}
+
+.btn--open-account {
+  padding: 1.5rem 1.8rem;
+  border-radius: 3rem;
+  background: var(--gradient-primary);
 }
 
 .navbar__link:hover {
@@ -133,11 +142,99 @@ body {
   transform: rotate(-45deg) translateX(1.4rem);
 }
 
+/* HERO SECTION */
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3rem;
+  padding: 6rem 0;
+}
+
+.hero__title {
+  font-size: 3.5rem;
+}
+
+.hero__tagline {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.hero__learn-more {
+  display: inline-block;
+  margin-top: 1.5rem;
+  padding-bottom: 0.3rem;
+  border-bottom: 0.1rem solid #ffb003;
+
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: #ffb003;
+}
+
+.hero__image {
+  max-width: 45rem;
+}
+
 /* MAIN CONTENT */
 main {
-  padding: 1.5rem;
+  padding: 0 1.5rem;
 }
 
 img {
   width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header__nav {
+    position: static;
+    height: 100%;
+    width: max-content;
+    flex-direction: row;
+    background: transparent;
+  }
+
+  .btn--hamburger {
+    display: none;
+  }
+
+  .hero {
+    max-width: 110rem;
+    margin: auto;
+    padding: 8rem 3rem;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header {
+    height: 100vh;
+    align-items: center;
+  }
+
+  .navbar {
+    max-width: 128rem;
+    width: 100%;
+    padding: 1.5rem;
+  }
+
+  .hero > div {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__title {
+    font-size: 4.5rem;
+  }
+
+  .hero__tagline {
+    font-size: 2.4rem;
+  }
 }
