--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 :root {
   --primary-color: #ffcb03;
+  --primary-dark-color: #ffb003;
   --primary-bg-color: #f3f3f3;
   --secondary-bg-color: #37383d;
   --primary-text-color: #444;
@@ -23,6 +24,8 @@ body {
   background-color: var(--primary-bg-color);
 
   font-family: 'Poppins', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 500;
   color: var(--primary-text-color);
 }
 
@@ -57,6 +60,7 @@ header {
   gap: 3rem;
   background-color: #fff;
   list-style-type: none;
+  z-index: 1;
   transition: all 1s;
 }
 
@@ -90,6 +94,8 @@ header {
   border: none;
   outline: none;
   appearance: none;
+  background: transparent;
+  z-index: 1;
 }
 
 .menubar {
@@ -148,11 +154,10 @@ header {
   flex-direction: column;
   justify-content: center;
   gap: 3rem;
-  padding: 6rem 0;
 }
 
 .hero__title {
-  font-size: 3.5rem;
+  font-size: clamp(3rem, 5vw, 4.6rem);
 }
 
 .hero__text-contents {
@@ -172,26 +177,30 @@ header {
   height: 100%;
   width: 100%;
   padding: 0.2rem;
-  transform: skewX(10deg);
+  opacity: 0.8;
+  transform: scale(1.065) skew(20deg);
   background: var(--gradient-primary);
   z-index: -1;
 }
 
 .hero__tagline {
-  font-size: 2rem;
+  font-size: clamp(2rem, 2.5vw, 2.4rem);
   font-weight: 500;
 }
 
 .hero__learn-more {
   display: inline-block;
   width: max-content;
-  margin-top: 1.5rem;
   padding-bottom: 0.3rem;
   border-bottom: 0.1rem solid #ffb003;
 
   font-size: 1.6rem;
   text-decoration: none;
-  color: #ffb003;
+  color: var(--primary-dark-color);
+}
+
+.hero__image-control {
+  margin: auto;
 }
 
 .hero__image {
@@ -199,9 +208,72 @@ header {
 }
 
 /* MAIN CONTENT */
-main {
-  padding: 0 1.5rem;
+section {
+  padding: 7rem 1.5rem;
+  border-top: 0.1rem solid #ddd;
 }
+
+.hero.section {
+  padding: 10rem 0 7rem;
+  border: none;
+}
+
+/* SECTION 1 - FEATURES SECTION */
+.section__tag {
+  text-transform: uppercase;
+  color: var(--primary-dark-color);
+}
+
+.section__heading {
+  font-size: clamp(2.4rem, 5vw, 3.5rem);
+  font-weight: 500;
+  line-height: 1.3;
+}
+
+.feature {
+  margin: auto;
+  margin-top: 3.5rem;
+  max-width: 40rem;
+}
+
+.feature__image {
+  border-radius: 1.8rem;
+}
+
+.feature__details {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.feature__icon {
+  padding: 1rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: rgba(255, 176, 3, 0.2);
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature__icon > svg {
+  width: 100%;
+  height: 100%;
+  fill: var(--primary-dark-color);
+}
+
+.feature__heading {
+  font-size: 2rem;
+}
+
+.feature__description {
+  font-weight: 300;
+}
+
+/* SECTION 2 - OPERATIONS */
 
 img {
   width: 100%;
@@ -233,6 +305,40 @@ img {
     justify-content: center;
     align-items: center;
   }
+
+  #section--1 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 5rem;
+  }
+
+  .feature {
+    max-width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+  }
+
+  .section__intro {
+    width: 70rem;
+    margin: 0 3rem;
+  }
+
+  .section .feature > div {
+    max-width: 50%;
+  }
+
+  .feature__img {
+    width: 100%;
+  }
+
+  .feature:nth-child(3) {
+    flex-direction: row-reverse;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -253,7 +359,7 @@ img {
 }
 
 @media screen and (min-width: 1280px) {
-  .hero__title {
-    font-size: 4.5rem;
+  .feature {
+    max-width: 125rem;
   }
 }
