--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,12 @@ main section {
   margin-top: 3.5rem;
   position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   overflow: hidden;
+}
+
+.slide {
+  min-width: 100%;
 }
 
 .testimonial {
@@ -488,10 +492,6 @@ main section {
     gap: 5rem;
   }
 
-  #section--1 {
-    flex-flow: row wrap;
-  }
-
   .feature {
     max-width: 100%;
     margin: 0;
@@ -539,6 +539,14 @@ main section {
   .icon--control {
     min-width: 5rem;
     height: 5rem;
+  }
+
+  .carousel {
+    width: 65rem;
+  }
+
+  .slide {
+    width: 68rem;
   }
 }
 
