--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ header {
   outline: none;
   appearance: none;
   background: transparent;
+  cursor: pointer;
   z-index: 1;
 }
 
@@ -457,6 +458,39 @@ main section {
   background-color: #666;
 }
 
+/* SECTION 4 - CTA */
+#section--4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  border-bottom: 0.1rem solid #444;
+}
+
+#section--4,
+footer {
+  background-color: var(--secondary-bg-color);
+}
+
+.cta--title {
+  font-size: clamp(2.4rem, 5vh, 3.5rem);
+  font-weight: 500;
+  text-align: center;
+  color: #fff;
+}
+
+#section--4 > a {
+  font-size: clamp(1.5rem, 3vh, 1.8rem);
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+
+#section--4 > a:hover {
+  transform: scale(1.05);
+  transition: all 0.6s;
+}
+
 @media screen and (min-width: 768px) {
   header {
     display: flex;
@@ -547,6 +581,10 @@ main section {
 
   .slide {
     width: 68rem;
+  }
+
+  .cta--title {
+    width: 75rem;
   }
 }
 
