--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,102 @@ footer {
   text-decoration: underline;
 }
 
+/*  OVERLAY AND POP-UP */
+.overlay {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(0.25rem);
+}
+
+.overlay.active {
+  opacity: 100;
+  visibility: visible;
+  transition: all 0.6s;
+  z-index: 1;
+}
+
+.form--open-account {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  padding: 1.5rem;
+  width: 92%;
+  padding: 5rem 1.5rem;
+  transform: translate(-50%, -50%);
+  background-color: #f3f3f3;
+  max-width: 45rem;
+}
+
+.form--open-account.active {
+  opacity: 100;
+  visibility: visible;
+  transition: all 0.6s;
+  z-index: 2;
+}
+
+.overlay--close {
+  position: absolute;
+  top: 0.5rem;
+  right: 1.2rem;
+  font-size: 3rem;
+  cursor: pointer;
+}
+
+form {
+  width: 100%;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+legend {
+  font-size: clamp(2.3rem, 3vw, 2.8rem);
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.form--control {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+label {
+  display: block;
+  text-align: left;
+  font-size: 1.6rem;
+}
+
+input {
+  padding: 1.2rem 0;
+  text-indent: 1rem;
+  border: 0.01rem solid #444;
+  width: 68%;
+}
+
+.btn--next-step {
+  border-radius: 30rem;
+  padding: 1.2rem 1.8rem;
+  border: none;
+  background: var(--gradient-primary);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   header {
     display: flex;
