--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,8 @@ main section {
   appearance: none;
   outline: 0;
   border: none;
+  cursor: pointer;
+  transition: all 0.6s;
 
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
@@ -311,7 +313,8 @@ main section {
 }
 
 .btn__operation.active {
-  transform: translateY(-62%);
+  transform: translateY(-2.2rem);
+  transition: all 0.6s;
 }
 
 .btn__operation > span {
@@ -712,6 +715,10 @@ input {
 
   .operations__controls {
     gap: 2rem;
+  }
+
+  .btn__operation.active {
+    transform: translateY(-3.2rem);
   }
 
   .btn__operation {
