--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,23 @@ body {
   font-weight: 500;
   color: var(--primary-text-color);
 }
-
-header {
-  padding: 2rem 1.5rem;
-}
-
 .navbar {
+  padding: 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: all 0.6s;
+}
+
+.sticky {
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: all 0.6s;
+  box-shadow: 0px 10px 30px 0px rgb(51 51 51 / 0.1);
 }
 
 .header__logo {
@@ -160,7 +168,7 @@ header {
   flex-direction: column;
   justify-content: center;
   gap: 3rem;
-  padding: 10rem 0 7rem;
+  padding: 10rem 1.5rem 7rem;
 }
 
 .hero__title {
@@ -777,7 +785,6 @@ input {
   }
 
   .navbar {
-    max-width: 128rem;
     width: 100%;
     padding: 1.5rem;
   }
@@ -792,11 +799,21 @@ input {
 }
 
 @media screen and (min-width: 1280px) {
+  .navbar {
+    padding: 2rem 3rem;
+  }
+
   .hero {
     padding: 0;
   }
 
   .feature {
     max-width: 125rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .navbar {
+    padding: 2.8rem 17rem;
   }
 }
