--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 
 .sticky {
   position: fixed;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.96);
   width: 100%;
   top: 0;
   left: 0;
