--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body {
   position: fixed;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.96);
+  transition: all 0.6s;
 }
 
 .header__logo {
