--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body {
   color: var(--primary-text-color);
 }
 
+.navbar--container {
+  transition: all 0.6s;
+  z-index: 1;
+}
+
 .navbar {
   padding: 2rem;
   display: flex;
@@ -51,7 +56,6 @@ body {
   width: 15rem;
   height: auto;
   transition: all 0.6s;
-  z-index: 2;
 }
 
 /* MOBILE NAV */
@@ -226,6 +230,20 @@ body {
 main section {
   padding: 12.5rem 1.5rem;
   border-top: 0.1rem solid #ddd;
+}
+
+main > .section {
+  opacity: 0;
+  transform: translateY(5rem);
+}
+
+/* .loaded {
+} */
+
+.section.fadein {
+  opacity: 1;
+  transform: none;
+  transition: all 0.6s;
 }
 
 /* SECTION 1 - FEATURES SECTION */
